# GaborFilterBasedForegroundSeparationDoc

./: .classification.h.kate-swp  .classification_new.cpp.kate-swp  CCCN_Classifier.cpp  CCCN_Classifier.h  CMakeLists.txt  CMakeLists.txt~  ClusteringClassification.cpp  ClusteringClassification.h  ColorQuantization.cpp  ColorQuantization.h  ConcensusBasedClustering.cpp  ConcensusBasedClustering.h  FeatureExtraction.cpp  FeatureExtraction.h  GaborAngleFeature.cpp  GaborAngleFeature.h  GradientFeature.cpp  GradientFeature.h  Morphology.cpp  Morphology.h  MultiClassClassificationMetrics.cpp  MultiClassClassificationMetrics.h  PixelValidation.h  PrepareAlethiaGT.cpp  PrepareAlethiaGT.h  PrepareAlethiaGT_tg.cpp  PrepareAlethiaGT_tg_ignore.cpp  PrepareAlethiaGT_tgns.cpp  RectangleTest.cpp  RectangleTest.h  RunLengthFeature.cpp  RunLengthFeature.h  ScalarColorFeature.cpp  ScalarColorFeature.h  SegmentationUnit.cpp  SegmentationUnit.h  SmoothingGapfilling.cpp  SmoothingGapfilling.h  SpatialAndAotocorrelatedFeature.cpp  SpatialAndAotocorrelatedFeature.h  (+18 more)
AlethiaParser/: AlethiaParser.cpp  AlethiaParser.h
alglib/: alglibhdr.txt  alglibinternal.cpp  alglibmisc.cpp  alglibsrc.txt  ap.cpp  linalg.cpp  specialfunctions.cpp  statistics.cpp
othertypecode/: Test.py  gaborFeatures.m  matlab_test_gabor.m
pls/: Makefile  Storage.cpp  base64.cpp  base64.h  encoding.cpp  encoding.h  headers.h  load_matrix.m  main.cpp  maths.cpp  maths.h  model.cpp  model.h  pls.cpp  pls.h  pls.vcproj  storage.h  write_matrix.m
pls/data/: NegSamplesTesting.feat  NegSamplesTraining.feat  PosSamplesTesting.feat  PosSamplesTraining.feat
